Added ability to share modules between server and mobile in campaign file